Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
     }
    ],
    "source": [
-    "x_values = scaled_movies['budget']\n",
+    "x_values = scaled_movies['\n",
     "y_values = scaled_movies['domgross']"
    ]
   },
