--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
     }
    ],
    "source": [
-    "x_values = list(lambda: )\n",
+    "x_values = list(map(lambda: )\n",
     "y_values = scaled_movies['domgross']"
    ]
   },
