--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
    ],
    "source": [
     "x_values = list(map(lambda x: x['budget'], scaled_movies)\n",
-    "y_values = scaled_movies['domgross']"
+    "y_values = list(map(lambda y:))"
    ]
   },
   {
