--- a/index.ipynb
+++ b/index.ipynb
@@ -2723,7 +2723,7 @@
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
     "    my_trace = {'marker': {'color': 'red'}, 'mode': 'lines', 'name': f'error at {x}'}\n",
-    "    my_trace."
+    "    my_trace.add({'x':})"
    ]
   },
   {
