--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -3919,7 +3919,7 @@
     "def error_line_traces(x_values, y_values, m, b):\n",
     "    trace_list = []\n",
     "    for x in x_values:\n",
-    "        trace_list.append(error_line_trace())"
+    "        trace_list.append()"
    ]
   },
   {
